# Financial-Chatbot-CC

./: .env.example  .gitignore  README.md  ui-preview-phase2.html
docs/: admin-workflows.md  architecture.md  data-model.md  deployment.md  ingestion.md  known-issues.md  observability.md  query-resolution.md
docs/superpowers/plans/: 2026-04-21-phase6-discrepancy.md  2026-04-24-phase-11-admin-panel.md  2026-04-24-phase-12-hardening.md  2026-04-24-phase-13-real-resolver.md
docs/superpowers/specs/: 2026-04-21-phase6-discrepancy-design.md  2026-04-24-phase-11-admin-panel-design.md
ingestion/: .env.example  bulk_import.py  main.py  pyproject.toml
ingestion/src/: config.py  db.py  ingestion.py  normalizer.py  overlap.py  parser.py  postgres_data_provider.py  query_resolver.py  resolver_service.py  shortcut_engine.py  storage.py
ingestion/tests/: conftest.py  test_normalizer.py  test_overlap.py  test_parser.py  test_query_resolver.py  test_resolver_service.py  test_shortcut_engine.py
web/: package-lock.json  package.json  proxy.ts  vitest.config.ts
web/app/: layout.tsx  page.tsx
web/app/(app)/: layout.tsx
web/components/: app-sidebar.tsx  context-bar.tsx  mapping-upload-form.tsx  mapping-upload-history.tsx  mode-toggle.tsx  project-tabs.tsx  report-upload-form.tsx  report-upload-list.tsx
web/components/admin/: AdminTabs.tsx  DiscrepanciesTab.tsx  DiscrepancyReviewRow.tsx  ExportButton.tsx  InlineNoteRow.tsx  QueryLogRow.tsx  QueryLogsFilterBar.tsx  QueryLogsTab.tsx
web/lib/: csv.ts  mock-data.ts  mode-context.tsx
web/supabase/: seed.sql
(+30 files in other folders)
